.local/share/qtile/qtile.log
2025-05-13 15:53:18,246 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-13 17:49:30,743 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-13 21:22:15,718 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:17,713 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:18,297 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:18,437 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:18,585 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:19,467 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:19,767 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:19,931 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:20,063 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:20,214 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:20,378 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:20,526 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:20,658 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:20,780 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:21,424 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:21,576 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:21,730 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:21,870 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:22,550 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:22,702 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:22,846 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:22,980 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:34,886 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:35,674 ERROR libqtile manager.py:spawn():L1301 couldn't find `kitty`
2025-05-13 21:22:46,784 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-13 21:39:38,411 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-13 22:00:07,319 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-13 22:05:20,602 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-13 22:08:33,929 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-13 23:17:36,516 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-13 23:17:53,080 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-14 05:34:26,418 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-14 06:28:27,765 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-14 07:14:39,454 ERROR libqtile manager.py:spawn():L1301 couldn't find `feh`
2025-05-14 07:21:18,506 WARNING libqtile lifecycle.py:_atexit():L38 Qtile will now terminate
2025-05-14 20:03:05,288 ERROR libqtile manager.py:reload_config():L295 Configuration error:
Traceback (most recent call last):
  File "/usr/lib64/python3.13/site-packages/libqtile/core/manager.py", line 293, in reload_config
    self.config.load()
    ~~~~~~~~~~~~~~~~^^
  File "/usr/lib64/python3.13/site-packages/libqtile/confreader.py", line 133, in load
    config = importlib.reload(sys.modules[name])
  File "/usr/lib64/python3.13/importlib/__init__.py", line 129, in reload
    _bootstrap._exec(spec, module)
    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 866, in _exec
  File "<frozen importlib._bootstrap_external>", line 1022, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/abir101/.config/qtile/config.py", line 189
    wallpaper = "~/.local/share/backgrounds/wallpaper.jpg",
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
2025-05-14 20:03:05,312 WARNING libqtile utils.py:_notify():L344 Unable to send notification. Is a notification server running?
